<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".ui.registration.RegistrationFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:textSize="25sp"
        android:id="@+id/tv_registration_heading"

        android:gravity="center"
        android:textColor="@color/white"
        android:background="@color/material_dynamic_tertiary40"
        android:text="Registration Screen" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/et_first_name"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50sp"
        android:layout_marginEnd="50sp"
        android:hint="Enter first name"

        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/et_last_name"

        android:layout_marginTop="20dp"
        android:layout_marginStart="50sp"
        android:layout_marginEnd="50sp"
        android:hint="Enter last name"

        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/et_email"

        android:layout_marginTop="20dp"
        android:layout_marginStart="50sp"
        android:layout_marginEnd="50sp"
        android:hint="Enter email"

        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/et_password"

        android:layout_marginTop="20dp"
        android:layout_marginStart="50sp"
        android:layout_marginEnd="50sp"
        android:hint="Enter password"

        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/et_confirm_password"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50sp"
        android:layout_marginEnd="50sp"
        android:hint="Enter confirm password"

        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_now"
        android:gravity="center"
        android:id="@+id/btn_register_now"
        android:layout_marginStart="50sp"
        android:layout_marginEnd="50sp"
        android:layout_marginTop="40dp"
        android:textAllCaps="false"

        android:textSize="14sp"

        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login?"
        android:id="@+id/btn_login"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/teal_200"/>

</LinearLayout>