...
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign up?"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        android:id="@+id/btn_signUp1"
        android:layout_gravity="center"
        android:backgroundTint="@color/teal_200"/>

</LinearLayout>
